fixed backgrounds overlapping

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -44,6 +44,7 @@ html>body .full-screen, .fullscreen-top {
 $member-bio-height: 300px;
 
 .member-bio {
+  background: #fff;
   position:absolute;
   left:10%;
   right:10%;
